--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <section>
-        <h1 class="game--title">Tic Tac Toe</h1>
-        <div class="game--container">
+        <h1 class="game-title">Tic Tac Toe</h1>
+        <div id="game-container">
             <div data-cell-index="0" class="cell"></div>
             <div data-cell-index="1" class="cell"></div>
             <div data-cell-index="2" class="cell"></div>
@@ -22,10 +22,10 @@
             <div data-cell-index="7" class="cell"></div>
             <div data-cell-index="8" class="cell"></div>
         </div>
-        <h2 class="game--status"></h2>
-        <button class="game--restart">Restart Game</button>
+        <h2 class="game-status"></h2>
+        <button class="game-restart">Restart Game</button>
     </section>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
