Player factory implementation

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1>Tic Tac Toe</h1>
     <div class="game-container">
       <div class="form-container">
-        <form class="" action="index.html" method="post">
+        <form class="player-info" action="index.html" method="post">
           <div class="label-wrap">
-            <label for="playerOneName"></label>
-            <input type="text" name="playerOneName" value="" id="playerOneName">
+            <label for="player1"></label>
+            <input type="text" name="player1" id="player1">
           </div>
           <div class="label-wrap">
-            <label for="playerTwoName"></label>
-            <input type="text" name="playerTwoName" value="" id="playerTwoName">
+            <label for="player2"></label>
+            <input type="text" name="player2" id="player2">
           </div>
         </form>
       </div>
@@ -32,6 +32,7 @@
         <div class="cell"></div>
       </div>
     </div>
+    <button id="reset" type="button">Reset</button>
     <script src="index.js"></script>
   </body>
 </html>
