--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
           </div>
         </form>
       </div>
+      <div class="col-4 offset-4 place hidden">
+      <div class="game-status alert alert-primary text-center">
+        <h4>Board:</h4>
+      </div>
       <div id="board">
         <div class="cell"></div>
         <div class="cell"></div>
