clean code and refine style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Tic Tac Toe</title>
+    <title>Tika Taka Toka</title>
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
   </head>
@@ -44,11 +44,8 @@
             </div>
           </div>
         </div>
-        <div class="winner">
-          <h2 id="winner-text"></h2>
-        </div>
       </div>
     </div>
-    <script src="index.js" charset="utf-8"></script>
+    <script src="index.js"></script>
   </body>
 </html>
